Workspaces/WorkspaceLenovo/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:54:41 **** Incremental Build of configuration Debug for project 019_Nuc446RE_InterPriority ****
make -j8 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F4 -DSTM32F446RETx -DNUCLEO_F446RE -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:42:2: error: too few arguments to function 'configure_priority_for_irqs'
   42 |  configure_priority_for_irqs();
      |  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../Src/main.c:26:6: note: declared here
   26 | void configure_priority_for_irqs(uint8_t irq_no){
      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
